# hdeps

./: README.md  flake.nix  hdeps.cabal  hdeps.nix  hie.yaml
app/: Main.hs
example/: README.md  cabal.project  flake.nix  hdeps.json
example/hdeps/: github.com-LightAndLight-beam-3ebb79baff43416caee95e81c05ce74c429bbe82-beam-postgres-trans-src.nix  github.com-LightAndLight-beam-3ebb79baff43416caee95e81c05ce74c429bbe82-beam-postgres-trans.nix  hackage.haskell.org-aeson-2.2.3.0-src.nix  hackage.haskell.org-aeson-2.2.3.0.nix  overlay.nix
example/hdeps/aeson/: cabal.nix  default.nix
example/hdeps/beam-postgres-trans/: default.nix
scripts/: fetchHackage
src/: Hdeps.hs
