cabal-version:      3.0
name:               hdeps
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Build
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hdeps
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hdeps
    import:           warnings
    main-is:          Main.hs
    build-depends:
        aeson,
        base ^>=4.19.2.0,
        containers,
        directory,
        hdeps,
        optparse-applicative,
        process,
        text

    hs-source-dirs:   app
    default-language: Haskell2010
